JavaScript/rediscovering_javascript/modules/output/collide2.output
(node:78842) ExperimentalWarning: The ESM module loader is experimental.
file:///Users/venkats/books/ves6/Book/code/modules/collide2.mjs:3
class Thermostat {}
                  ^
SyntaxError: Identifier 'Thermostat' has already been declared
    at loaders.set (internal/loader/ModuleRequest.js:33:13)
    at <anonymous>
